fixing alignment issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -342,7 +342,7 @@ input, select, textarea {
   font-size: 60px;
   font-weight: 400;
 	justify-content: left;
-	margin-bottom: 30px;
+	margin-bottom: 34px;
 }
 
 .wrapper .dynamic-txts{
